--- a/tdse-tp2_02-model_integration.ioc
+++ b/tdse-tp2_02-model_integration.ioc
@@ -82,20 +82,21 @@ PA5.Locked=true
 PA5.Signal=GPIO_Output
 PA9.GPIOParameters=GPIO_PuPd,GPIO_Label
 PA9.GPIO_Label=BTN_B
-PA9.GPIO_PuPd=GPIO_NOPULL
+PA9.GPIO_PuPd=GPIO_PULLUP
 PA9.Locked=true
 PA9.Signal=GPIO_Input
 PB3.GPIOParameters=GPIO_Label
 PB3.GPIO_Label=SWO
 PB3.Locked=true
 PB3.Signal=SYS_JTDO-TRACESWO
-PB6.GPIOParameters=GPIO_Label
+PB6.GPIOParameters=GPIO_PuPd,GPIO_Label
 PB6.GPIO_Label=BTN_C
+PB6.GPIO_PuPd=GPIO_PULLUP
 PB6.Locked=true
 PB6.Signal=GPIO_Input
 PC13-TAMPER-RTC.GPIOParameters=GPIO_PuPd,GPIO_Label
 PC13-TAMPER-RTC.GPIO_Label=B1 [Blue PushButton]
-PC13-TAMPER-RTC.GPIO_PuPd=GPIO_NOPULL
+PC13-TAMPER-RTC.GPIO_PuPd=GPIO_PULLUP
 PC13-TAMPER-RTC.Locked=true
 PC13-TAMPER-RTC.Signal=GPXTI13
 PC14-OSC32_IN.Locked=true
@@ -104,8 +105,9 @@ PC14-OSC32_IN.Signal=RCC_OSC32_IN
 PC15-OSC32_OUT.Locked=true
 PC15-OSC32_OUT.Mode=LSE-External-Oscillator
 PC15-OSC32_OUT.Signal=RCC_OSC32_OUT
-PC7.GPIOParameters=GPIO_Label
+PC7.GPIOParameters=GPIO_PuPd,GPIO_Label
 PC7.GPIO_Label=BTN_D
+PC7.GPIO_PuPd=GPIO_PULLUP
 PC7.Locked=true
 PC7.Signal=GPIO_Input
 PD0-OSC_IN.Locked=true
