--- a/tdse-tp2_04-model_integration.ioc
+++ b/tdse-tp2_04-model_integration.ioc
@@ -20,7 +20,8 @@ Mcu.Pin10=PA13
 Mcu.Pin11=PA14
 Mcu.Pin12=PB3
 Mcu.Pin13=PB6
-Mcu.Pin14=VP_SYS_VS_Systick
+Mcu.Pin14=PB8
+Mcu.Pin15=VP_SYS_VS_Systick
 Mcu.Pin2=PC15-OSC32_OUT
 Mcu.Pin3=PD0-OSC_IN
 Mcu.Pin4=PD1-OSC_OUT
@@ -29,7 +30,7 @@ Mcu.Pin6=PA3
 Mcu.Pin7=PA5
 Mcu.Pin8=PC7
 Mcu.Pin9=PA9
-Mcu.PinsNb=15
+Mcu.PinsNb=16
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103RBTx
@@ -94,6 +95,10 @@ PB6.GPIO_Label=BTN_C
 PB6.GPIO_PuPd=GPIO_PULLUP
 PB6.Locked=true
 PB6.Signal=GPIO_Input
+PB8.GPIOParameters=GPIO_Label
+PB8.GPIO_Label=LED_B
+PB8.Locked=true
+PB8.Signal=GPIO_Output
 PC13-TAMPER-RTC.GPIOParameters=GPIO_PuPd,GPIO_Label
 PC13-TAMPER-RTC.GPIO_Label=B1 [Blue PushButton]
 PC13-TAMPER-RTC.GPIO_PuPd=GPIO_PULLUP
@@ -138,8 +143,8 @@ ProjectManager.MainLocation=Core/Src
 ProjectManager.NoMain=false
 ProjectManager.PreviousToolchain=
 ProjectManager.ProjectBuild=false
-ProjectManager.ProjectFileName=tdse-tp2_02-model_integration.ioc
-ProjectManager.ProjectName=tdse-tp2_02-model_integration
+ProjectManager.ProjectFileName=tdse-tp2_03-model_integration.ioc
+ProjectManager.ProjectName=tdse-tp2_03-model_integration
 ProjectManager.ProjectStructure=
 ProjectManager.RegisterCallBack=
 ProjectManager.StackSize=0x400
